--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>MDN Games: Three.js demo</title>
+    <title>MoodMarbles</title>
     <style>
         body { margin: 0; padding: 0; }
         canvas { width: 100%; height: 100%; }
@@ -10,6 +10,7 @@
 </head>
 <body>
 <script src="three.min.js"></script>
+<script src="particles.js"></script>
 <script>
     var WIDTH = window.innerWidth;
     var HEIGHT = window.innerHeight;
@@ -17,7 +18,7 @@
     // Create the renderer from THREE library
     var renderer = new THREE.WebGLRenderer({antialias:true});
     renderer.setSize(WIDTH, HEIGHT);
-    renderer.setClearColor(0xDDDDDD, 1);
+    renderer.setClearColor(0x000000, 1);
     document.body.appendChild(renderer.domElement);
 
     // Create the scene
@@ -28,12 +29,15 @@
     camera.position.z = 50;
     scene.add(camera);
 
+     var particleSystem = createParticles();
+
     // Render the scene
     function render() {
         requestAnimationFrame(render);
         t +=0.03;
         sphere.rotation.y += 0.01;
-        sphere.position.z = -7*Math.sin(t*2);
+        // sphere.position.z = -7*Math.sin(t*2);
+        updateParticles(particleSystem)
         renderer.render(scene, camera)
     }
 
@@ -49,6 +53,7 @@
     // Add to the scene
     scene.add(light);
     scene.add(sphere);
+    scene.add(particleSystem);
 
     // Manipulation
     sphere.rotation.set(0.4,0.2, 0);
